fixed scrollbar issue

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -4,7 +4,9 @@
 }
 
 
-
+#wrap {
+  overflow: auto;
+}
 
 /* top title bar */
 .navbar-header {
